--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.35.0",
     "bcrypt": "^5.0.1",
     "graphql": "^16.5.0",
     "graphql-request": "^4.3.0",
