--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "graphql": "^16.5.0",
     "graphql-request": "^4.3.0",
     "html-react-parser": "^3.0.1",
+    "micro": "^9.4.1",
     "moment": "^2.29.4",
     "next": "12.2.3",
     "next-auth": "^4.10.3",
