--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.10.0",
     "@stripe/stripe-js": "^1.35.0",
     "bcrypt": "^5.0.1",
     "graphql": "^16.5.0",
@@ -22,8 +23,10 @@
     "react-dom": "18.2.0",
     "react-loading-skeleton": "^3.1.0",
     "react-multi-carousel": "^2.8.2",
+    "react-spinners": "^0.13.4",
     "sass": "^1.54.0",
-    "stripe": "^10.0.0"
+    "stripe": "^10.0.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
