--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.0.2",
+    "@next-auth/mongodb-adapter": "^1.0.4",
+    "@sendgrid/mail": "^7.7.0",
     "@stripe/react-stripe-js": "^1.10.0",
     "@stripe/stripe-js": "^1.35.0",
     "bcrypt": "^5.0.1",
@@ -17,8 +20,10 @@
     "html-react-parser": "^3.0.1",
     "micro": "^9.4.1",
     "moment": "^2.29.4",
+    "mongodb": "^4.9.0",
     "next": "12.2.3",
     "next-auth": "^4.10.3",
+    "nodemailer": "^6.7.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loading-skeleton": "^3.1.0",
@@ -26,6 +31,7 @@
     "react-spinners": "^0.13.4",
     "sass": "^1.54.0",
     "stripe": "^10.0.0",
+    "sweetalert2": "^11.4.29",
     "swr": "^1.3.0"
   },
   "devDependencies": {
